--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -567,9 +567,12 @@ body {
   border-radius: 26px;
   box-shadow: 0 3px 6px #00000029;
   position: relative;
+  &__tittle3{
+    white-space: nowrap;
+  }
   @media (max-width: $mobile-width) {
-    width: 366px;
-    height: 340px;
+    width: 350px;
+    height: 324px;
   }
 
   &__tittle3 {
