--- a/src/scss/partials/_modal.scss
+++ b/src/scss/partials/_modal.scss
@@ -81,7 +81,7 @@
   flex-direction: column;
   text-align: center;
   justify-content: start;
-  width: fit-content;
+  width: 100%;
 
   &__label {
     display: flex;
